// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CrowdfundingCard /> CrowdfundingCard props matches with snapshot 1`] = `
.c1 {
  overflow: hidden;
  position: relative;
  padding-top: 56.25%;
}

.c1 > img {
  width: 100%;
  display: block;
  position: absolute;
  top: 0;
  text-align: center;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  top: 0;
  margin-top: -1.875rem;
  background-color: #fff;
}

.c3 {
  margin-left: 0.625rem;
  background-color: #d8d8d8;
}

.c4 {
  margin-left: 0.625rem;
  margin-right: calc(2 * 0.625rem);
  line-height: 1.2;
}

.c6 {
  margin-top: 0.9375rem;
  margin-bottom: 0.3125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  line-height: 1;
}

.c7 {
  margin-right: 0.9375rem;
}

.c7:last-child {
  margin-right: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  margin-top: 0.3125rem;
  margin-bottom: 1.25rem;
}

.c9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c10 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: calc(2 * 0.625rem);
}

.c11 {
  position: absolute;
  top: 0;
  right: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  padding: 0.625rem;
  line-height: 1;
}

.c0 {
  position: relative;
  padding-bottom: 0.3125rem;
}

.c5 {
  min-height: 3.125rem;
}

@media (max-width:47.9375rem) {
  .c2 {
    display: none;
  }
}

@media (min-width:48rem) {
  .c6 {
    margin-top: 1.25rem;
    padding: 0 0.625rem;
  }
}

@media (min-width:48rem) {
  .c7 {
    margin-right: 1.875rem;
  }
}

@media (min-width:48rem) {
  .c8 {
    padding: 0 0.625rem;
  }
}

@media (max-width:47.9375rem) {
  .c11 {
    display: none;
  }
}

@media (min-width:48rem) {
  .c5 {
    min-height: 4.6875rem;
  }
}

<div
  className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover c0"
  href={null}
  onClick={[Function]}
  title="Lorem ipsum…"
>
  <div
    className="k-Card__imageContainer c1"
  >
    <img
      alt=""
      className="k-Card__image"
      src="#image"
    />
  </div>
  <div
    className="c2"
  >
    <div
      className="k-u-margin-top-single"
    >
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents c3"
        tabIndex={null}
      >
        <img
          alt=""
          className="k-ButtonImage__img"
          src="#image"
        />
      </span>
    </div>
    <div
      className="c4"
    >
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-regular "
      >
        Owner title
      </div>
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-light "
      >
        Owner description
      </div>
    </div>
  </div>
  <div
    className="c5"
  >




  </div>
  <div
    className="c6"
  >
    <div
      className="c7"
    >
      <span
        className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-light"
      >
        Lorem ipsum…
      </span>
    </div>
    <div
      className="c7"
    >
      <span
        className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-light"
      >
        Lorem ipsum…
      </span>
    </div>
    <div
      className="c7"
    >
      <span
        className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-light"
      >
        Lorem ipsum…
      </span>
    </div>
  </div>
  <div
    className="c8"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow={42}
      className="k-Progress c9"
      role="progressbar"
    >
      <div
        className="k-Progress__ramp"
        style={
          Object {
            "height": "4px",
          }
        }
      >
        <div
          className="k-Progress__slider"
          style={
            Object {
              "backgroundColor": "",
              "width": "42%",
            }
          }
        />
      </div>
    </div>
    <span
      className="k-u-color-font1 k-u-size-micro k-u-weight-regular k-u-hidden@s-down c10"
    >
      42 %
    </span>
  </div>
  <div
    className="c11"
  >
    <span
      className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-regular"
    >
      Lorem ipsum…
    </span>
  </div>

</div>
`;

exports[`<CrowdfundingCard /> CrowdfundingCardWidget props matches with snapshot 1`] = `
.c1 {
  overflow: hidden;
  position: relative;
  padding-top: 56.25%;
}

.c1 > img {
  width: 100%;
  display: block;
  position: absolute;
  top: 0;
  text-align: center;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  top: 0;
  margin-top: -1.875rem;
  background-color: #fff;
}

.c3 {
  margin-left: 0.625rem;
  background-color: #d8d8d8;
}

.c4 {
  margin-left: 0.625rem;
  margin-right: calc(2 * 0.625rem);
  line-height: 1.2;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0;
  line-height: 1;
  margin-top: 0.625rem;
  padding: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 {
  line-height: 1;
  margin-left: calc(2 * 0.625rem);
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  white-space: nowrap;
}

.c10 {
  margin: 0.3125rem 0 1.25rem 0;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  background: #222;
  border-radius: 1.5625rem;
  margin: 0.625rem 0.625rem 0 0;
  right: 0;
  top: 0;
  padding: 0.625rem 1.25rem;
}

.c13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-size: 0.875rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-width: initial;
  width: 100%;
  border: 0.125rem solid #19b4fa;
  background-color: #19b4fa;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c13:disabled {
  cursor: not-allowed;
}

.c13 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c13 >:last-child {
  margin-right: 0;
}

.c13 svg {
  fill: #fff;
}

.c13:hover,
.c13:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c13:hover svg,
.c13:focus svg {
  fill: #fff;
}

.c13:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c13:active svg {
  fill: #fff;
}

.c13:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c13:disabled svg {
  fill: #fff;
}

.c12 {
  padding: 0 0.625rem;
}

.c0 {
  position: relative;
}

.c5 {
  padding: 0 0.625rem;
  margin-top: 0.3125rem;
  min-height: 4.6875rem;
}

@media (max-width:47.9375rem) {
  .c2 {
    display: none;
  }
}

@media (min-width:48rem) {
  .c7 {
    padding: 0 0.625rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c13 {
    width: 12.5rem;
    height: 3.125rem;
  }
}

<div
  className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover c0"
  href={null}
  onClick={[Function]}
>
  <div
    className="k-Card__imageContainer c1"
  >
    <img
      alt=""
      className="k-Card__image"
      src="#image"
    />
  </div>
  <div
    className="c2"
  >
    <div
      className="k-u-margin-top-single"
    >
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents c3"
        tabIndex={null}
      >
        <img
          alt=""
          className="k-ButtonImage__img"
          src="#image"
        />
      </span>
    </div>
    <div
      className="c4"
    >
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-regular "
      >
        Owner title
      </div>
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-light "
      >
        Owner description
      </div>
    </div>
  </div>
  <div
    className="c5"
  >

    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <span
          className="k-u-color-font1 k-u-line-height-normal k-u-size-default k-u-weight-bold k-Card__title"
        >
          <span
            width={0}
          >
            <span />
            <span>
              Lorem ipsum…
            </span>
            <span
              style={
                Object {
                  "left": 0,
                  "position": "fixed",
                  "top": 0,
                  "visibility": "hidden",
                }
              }
            >
              …
            </span>
          </span>
        </span>
      </div>
      <div
        className="c8"
      >
        <span
          className="k-u-color-font1 k-u-line-height-normal k-u-size-tiny k-u-weight-bold"
        >
          27days
          <span
            className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-light c9"
          >
            restant
          </span>
        </span>
      </div>
    </div>

    <p
      className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-light c10"
    >
      <span
        className="c11"
        width={0}
      >
        <span />
        <span>
          Sed ut perspiciatis unde omnis iste natus error Lorem
        </span>
        <span
          style={
            Object {
              "left": 0,
              "position": "fixed",
              "top": 0,
              "visibility": "hidden",
            }
          }
        >
          …
        </span>
      </span>
    </p>
  </div>
  <div
    className="c12"
  >
    <button
      className="c13"
    >
      Lorem ipsum
    </button>
  </div>

  <div
    className="c14"
  >
    Sur
  </div>
</div>
`;
